# humalike-python

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  PRODUCT_INTEGRATION.md
examples/: README.md  async_quickstart.py  personas.py  quickstart.py  response_metadata.py  social_learning.py  social_memory.py  social_observability.py  theory_of_mind.py  turn_taking.py
src/humalike/: __init__.py  _response_validation.py  _transport.py  _version.py  async_client.py  client.py  errors.py  models.py  protocols.py  websocket.py
tests/: conftest.py  test_async_client.py  test_async_resources.py  test_client_core.py  test_documentation.py  test_errors_privacy.py  test_examples.py  test_models.py  test_polling.py  test_resources.py  test_response_contracts.py  test_runtime_regressions.py  test_transport_hardening.py  test_websocket.py
