[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "humalike-python"
dynamic = ["version"]
description = "Unofficial typed sync and async Python client for the Humalike APIs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jan Łojek" }]
maintainers = [{ name = "Jan Łojek" }]
dependencies = [
  "httpx>=0.27,<1",
  "typing-extensions>=4.8; python_version < '3.11'",
]
keywords = ["humalike", "huma", "agents", "social-ai", "sdk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: AsyncIO",
  "Typing :: Typed",
]

[project.optional-dependencies]
websocket = ["websockets>=12,<17"]
dev = [
  "build>=1",
  "mypy>=1.10",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "websockets>=12,<17",
]

[project.urls]
Homepage = "https://github.com/j-lojek/humalike-python"
Repository = "https://github.com/j-lojek/humalike-python"
Issues = "https://github.com/j-lojek/humalike-python/issues"
Changelog = "https://github.com/j-lojek/humalike-python/blob/main/CHANGELOG.md"
"Humalike API documentation" = "https://docs.humalike.com"

[tool.hatch.build.targets.wheel]
packages = ["src/humalike"]

[tool.hatch.version]
path = "src/humalike/_version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/README.md",
  "/SECURITY.md",
  "/docs",
  "/examples",
  "/pyproject.toml",
  "/src",
  "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-config --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
